--- a/strawberry_pdf.Rmd
+++ b/strawberry_pdf.Rmd
@@ -11,7 +11,7 @@ and maps. Make sure to include citations.
 ```{r setup, include=FALSE, echo=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 pacman::p_load("tidyverse","knitr","kableExtra","ggplot2", "ggbiplot")
-options(warn = -1)
+# options(warn = -1)
 ```
 
 ```{r, include=FALSE}
@@ -44,7 +44,7 @@ Besides, we deploy a shiny app [Shiny_strawberries](https://rongli.shinyapps.io/
 # 3. EDA -- We added mouse over into our plots.
 
 # 3.1 Show a pie chart with proportion in number of three states: CA, FL, WA
-```{r, include = TRUE}
+```{r, echo = FALSE}
 df<-data.frame(
   group = c("California","Florida","Washington"),
   value = c(.78,.20,.02)
@@ -68,7 +68,7 @@ For the comparison about average number of pesticide applications, there is an i
 
 
 # 3.3 Show the correlation of average number of Bee Toxicity measured in applications and carcinogen level
-```{r,include = TRUE}
+```{r,echo = FALSE}
 ggplot(df.num,aes(color=as.factor(toxicity_bee), y=Value, x=carcinogen)) + 
    xlab("Carcinogen Level")+
    ylab("Average Number of Applications") + 
@@ -79,14 +79,14 @@ From this graph, we can get the interesting finding that all strawberries measur
 
 # 3.4 Plot the mean yields by state
 Strawberry yield in CWT/acre with standard deviation error bars. The number below each bar indicates the sample size represented in the bar. California clearly produces the most strawberries, followed by Florida and North Carolina. As the standard deviation error bars show, each state reliably produces similar quantities of strawberries across the years for which we have data. 
-```{r}
+```{r, echo = FALSE}
 shiny_bar("State")
 ```
 
 
 # 3.5 Plot the mean yields by year
 Strawberry yield in CWT/acre with standard deviation error bars. The number below each bar indicates the sample size represented in the bar. We can see that in 2019 and 2020 there are very small sample sizes, and, as a result, large standard deviations. Each year also has a large standard deviation, since the selected states produce very different quantitites of strawberries. 
-```{r}
+```{r, echo = FALSE}
 shiny_bar("Year")
 ```
 
